# https://betterprogramming.pub/a-pyproject-toml-developers-cheat-sheet-5782801fb3ed
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network_exporter"
version = "1.35"
dependencies = [
  "setuptools",
  "fastapi",
  "pydantic",
  "uvicorn",
  "pan-python",
  "pan-os-python",
  "prometheus-client",
  "prometheus-fastapi-instrumentator",
  "xmltodict",
  "netmiko",
  "typer",
  "cachetools"
]
[tool.setuptools]
packages = ['src/network_exporter']

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-mock==3.14.0"
]
[project.scripts]
network-exporter = "network_exporter.runner:main"

[project.urls]
changelog = "./CHANGELOG.md"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
